# LaunchR

./: CMakeLists.txt  README.md
.github/workflows/: ci-windows.yml
docs/: DSL.md
src/: LaunchR.cpp  LaunchR.hpp  main.cpp
src/filters/: FileName.cpp  FileName.hpp  Filter.cpp  Filter.hpp  Source.cpp  Source.hpp
src/searchers/: FileName.cpp  FileName.hpp  PortableApps.cpp  PortableApps.hpp  Searcher.cpp  Searcher.hpp  Text.cpp  Text.hpp
src/utils/: BoyerMoore.cpp  BoyerMoore.hpp  DSL.cpp  DSL.hpp  FileLogger.cpp  FileLogger.hpp  FileSystem.cpp  FileSystem.hpp  OpenFile.cpp  OpenFile.hpp  Settings.cpp  Settings.hpp
src/widgets/: MainFrame.cpp  MainFrame.hpp  ResultListCtrl.cpp  ResultListCtrl.hpp  SettingsDialog.cpp  SettingsDialog.hpp
